# gafro-extended

./: .dir-locals.el  .gitignore  .projectile  IMPLEMENTATION_CHECKLIST.md  README.md  SPACEMACS_SETUP.md  STRATEGIC_VISION.md  justfile
.claude/: settings.local.json
benchmarks/: run_benchmarks.sh
benchmarks/cpp/: CMakeLists.txt  modern_types_benchmark.cpp  si_units_benchmark.cpp
benchmarks/rust/: Cargo.toml
benchmarks/rust/src/: main.rs
examples/: PHASE2_DEMO_SUMMARY.md  README.md  phase2_validation_tests.json  type_safety_showcase.md
examples/cpp/: modern_types_showcase.cpp  phase2_validator.cpp
examples/robotics_applications/: Cargo.toml  autonomous_navigation_demo.cpp  autonomous_navigation_demo.rs  robot_manipulator_demo.cpp  robot_manipulator_demo.rs  sensor_calibration_demo.cpp  sensor_calibration_demo.rs
examples/rust/: Cargo.toml  phase2_validator.rs
examples/rust/src/: main.rs
rust_modern/: Cargo.toml
rust_modern/src/: ga_term.rs  grade_checking.rs  grade_indexed.rs  lib.rs  pattern_matching.rs  si_units.rs
scripts/: compare_examples.sh  compare_single_example.sh
shared_tests/: README.md  cross_language_validation_report.md  updated_cross_language_validation_report.md
shared_tests/cpp/: CMakeLists.txt  README.md  example_usage.cpp  gafro_test_config.cpp  gafro_test_config.hpp  json_loader.cpp  json_loader.hpp  real_code_executor.cpp  real_code_executor.hpp  test_runner.cpp
shared_tests/json/: gafro_algebra_tests.json  test_schema.json
shared_tests/json/algebra/: cross_language_consistency.json  multivector_tests.json  scalar_tests.json  vector_tests.json
shared_tests/rust/: Cargo.toml
shared_tests/rust/src/: angle.rs  canonical_output.rs  json_loader.rs  lib.rs  main.rs  si_quantity.rs  test_runner.rs  utilities.rs
src/gafro/modern/: GATerm.hpp  GradeChecking.hpp  GradeIndexed.hpp  PatternMatching.hpp  SIUnits.hpp  utilities.hpp
src/gafro/modern/utilities/: Angle.hpp  CanonicalOutput.hpp  SIQuantity.hpp  utilities.hpp
